--- a/Data_visualisation.ipynb
+++ b/Data_visualisation.ipynb
@@ -374,7 +374,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hypothèses : Le tarifs du ticket avait-il une insidance sur la survie des passagers ? "
+    "#### Analyse :\n",
+    "<p>On Représentes les passagers du titanic en fonction de leur age et du tarif auquel ils ont payés leurs billets; </p>\n",
+    "<h4> Hypothèses : </h4> Le tarifs du ticket avait-il une insidance sur la survie des passagers ? \n"
    ]
   },
   {
