--- a/Data_visualisation.ipynb
+++ b/Data_visualisation.ipynb
@@ -501,9 +501,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbaseconda76c3cbbed76b48a2a84540fe36a74ed2"
   },
   "language_info": {
    "codemirror_mode": {
