--- a/Titanic_nettoyage.ipynb
+++ b/Titanic_nettoyage.ipynb
@@ -421,12 +421,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('C:/Users/Utilisateur/Documents/PythonScripts/scripts/TitanicML/data/train_clean.csv')\n",
-    "test.to_csv('C:/Users/Utilisateur/Documents/PythonScripts/scripts/TitanicML/data/test_clean.csv')"
+    "train.to_csv('data/train_clean.csv',index= False)\n",
+    "test.to_csv('data/test_clean.csv', index=False)"
    ]
   },
   {
